# rocket_avionics

./: .gitignore  CLAUDE.md  README.md
desktop_app/: AltitudeChartCanvas.xojo_code  App.xojo_code  Build Automation.xojo_code  CLAUDE.md  Dialog_About.xojo_window  Dialog_GatewaySettings.xojo_window  Dialog_Preferences.xojo_window  Dialog_RenameRocket.xojo_window  FlightConnection.xojo_code  FlightData.xojo_code  FlightDatabase.xojo_code  Help.html  MenuBar_Main.xojo_menu  Module_Preferences.xojo_code  Module_PrintReport.xojo_code  Module_WindowSettings.xojo_code  RocketAvionicsDesktop.xojo_project  RocketAvionicsDesktop.xojo_resources  TelemetrySample.xojo_code  Window_Console.xojo_window  Window_DeviceInfo.xojo_window  Window_DeviceStorage.xojo_window  Window_FlightCompare.xojo_window  Window_GatewayInfo.xojo_window  Window_History.xojo_window  Window_Main.xojo_window  Window_Orientation.xojo_window  Window_Splash.xojo_window  Window_WifiConfig.xojo_window
docs/: COMPLEMENTARY_FILTER.md  EINK_DISPLAY.md  EINK_FEATHER_FRIEND_MODS.md  FIELD_OPERATIONS.md  FLASH_STORAGE.md  FLIGHT_STATES.md  GPS.md  HARDWARE.md  PROTOCOL.md  SENSORS.md  SPECIFICATIONS.md  TESTING.md  conversation_archive_2026-01-14_ios_wifi_recovery.md  conversation_archive_2026-01-22_versioning.md  flight_computer_carrier_board_design.md  flight_computer_parts_list.md  gateway_parts_list.md  heltec_flight_computer_parts_list.md  software_versioning.md
firmware_flight/: CLAUDE.md  CMakeLists.txt  increment_build.cmake
firmware_flight/include/: base64.h  bmp390.h  bmp581.h  build_number.h  ffconf.h  flight_control.h  flight_storage.h  font5x7.h  framebuffer.h  gps.h  heartbeat_led.h  imu.h  lora_radio.h  pins.h  rtc_pcf8523.h  sd_logger.h  status_display.h  storage.h  uc8151d.h  version.h
firmware_flight/src/: base64.c  bmp390.c  bmp581.c  diskio.c  eink_display.c  flight_control.c  flight_storage.c  framebuffer.c  gps.c  heartbeat_led.c  imu.c  lora_radio.c  main.c  rtc_pcf8523.c  sd_logger.c  status_display.c  storage.c  uc8151d.c  version.c  ws2812.pio
firmware_flight_heltec/: CLAUDE.md  README.md  build_number.h  firmware_flight_heltec.ino  increment_build.sh  version.h
firmware_gateway/: CLAUDE.md  CMakeLists.txt
firmware_gateway/include/: build_number.h  gateway_display.h  gateway_protocol.h  hx8357.h  neopixel.h  pins.h  ssd1306.h  version.h  wifi_config.h  wifi_nina.h
firmware_gateway/src/: bmp390.c  bmp581.c  gateway_display.c  gateway_protocol.c  gps.c  hx8357.c  main.c  neopixel.c  ssd1306.c  wifi_config.c  wifi_nina.c
firmware_gateway_heltec/: CLAUDE.md  README.md  build_number.h  firmware_gateway_heltec.ino  increment_build.sh  version.h
hardware/: Adafruit Feather RP2040 RFM.brd  Adafruit Feather RP2040 RFM.sch  feather-rp2040-rfm69-factory-reset.uf2
hardware/FeatherRP2040RFM69/: Adafruit Feather RP2040 RFM.brd  Adafruit Feather RP2040 RFM.sch
hardware/eInkBreakoutFriend/: Adafruit eInk Breakout Friend.brd  Adafruit eInk Breakout Friend.sch  Adafruit eInk Feather Friend.brd  Adafruit eInk Feather Friend.sch
ios_app/: AltitudeChartView.xojo_code  AltitudeChartView.xojo_code.disabled  App.xojo_code  AppIcon.xojo_image  Build Automation.xojo_code  CLAUDE.md  FlightConnection.xojo_code  FlightData.xojo_code  Module_Location.xojo_module  Module_Navigation.xojo_module  RocketAvionicsIOS.xojo_project  RocketLocation.xojo_code  Screen_About.xojo_mobile_screen  Screen_FlashStorage.xojo_mobile_screen  Screen_FlashStorage.xojo_screen  Screen_Main.xojo_mobile_screen  Screen_Main.xojo_screen  Screen_Recovery.xojo_mobile_screen  Screen_Recovery.xojo_screen  Screen_Rockets.xojo_mobile_screen  Screen_Settings.xojo_mobile_screen  Screen_Settings.xojo_screen  TelemetrySample.xojo_code  iPadLayout.xojo_code
tools/: gateway_test.sh  serial_monitor.py  usb_console.sh
